<resources>
    <string name="app_name">Lumen</string>
    <string name="check">Provjeri</string>
    <string name="pokreniPrvuIgru">Pokreni igru sa slovima</string>
    <string name="pokreniDruguIgru">Pokreni igru sa kovanicama</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="add_more_letters">addMoreLetters</string>
    <string name="green_on_correct">greenOnCorrect</string>
    <string name="DbLanguage">DbLanguage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="preference_file">preferences</string>
    <string name="coins">coins</string>
    <string name="add_more_letter">addMoreLetters</string>
    <string name="oAplikaciji1">Ova aplikacija nastala je na predmetu Projekt iz programske potpore te je dovršena u
        sklopu završnog rada Marka Sopčića.
    </string>
    <string name="oAplikaciji2">Na projektu su sudjelovali: Matija Čavlović, Karlo Čeh, Robin Fučko, Alen Magdić, Matija
        Puzjak, Marko Sopčić, Darian Šarić, Zlatko Verk i Kristijan Vukelić.\nGlas posudila:Lorena Sopčić
    </string>
    <string name="oAplikaciji3">Mentor: Boris Milašinović</string>
    <string name="oAplikaciji4">FER 2018.</string>
    <string name="word_game_settings">Word game settings</string>
    <string name="number_game_settings">Number game settings</string>
    <string name="coin_game_settings">Coin game settings</string>
    <!--<string name="calculating_game_settings">Calculating game settings</string>-->
    <string name="kategorije">Kategorije</string>
    <string name="validiraj_slovo_po_slovo">Validiraj slovo po slovo</string>
    <string name="validiraj_cijelu_rijec">Validiraj cijelu riječ</string>
    <string name="prikazi_sva_slova">Prikaži sva slova</string>
    <string name="stvori_vise_slova">Stvori više slova</string>
    <string name="zazeleni_tocno_slovo">Zazeleni točno slovo</string>

    <string name="permutation">Permutation</string>
    <string name="on_click">On click</string>
    <string name="additionCB">Addition</string>
    <string name="addition_lvl_1">level 1</string>
    <string name="addition_lvl_2">level 2</string>
    <string name="addition_lvl_3">level 3</string>
    <string name="subtractionCB">Subtraction</string>
    <string name="subtraction_lvl_1">level 1</string>
    <string name="subtraction_lvl_2">level 2</string>
    <string name="subtraction_lvl_3">level 3</string>
    <string name="multiplicationCB">Multiplication</string>
    <string name="multiplication_lvl_1">level 1</string>
    <string name="multiplication_lvl_2">level 2</string>
    <string name="multiplication_lvl_3">level 3</string>
    <string name="divisionCB">Division</string>
    <string name="division_lvl_1">level 1</string>
    <string name="division_lvl_2">level 2</string>
    <string name="division_lvl_3">level 3</string>

</resources>
