<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="280dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="2dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="back arrow"
        android:cropToPadding="false"
        android:src="@drawable/back_arrow"/>

    <TextView
        android:id="@+id/number_game_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_game_settings"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <CheckBox
        android:id="@+id/permutation"
        android:layout_width="123dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:text="@string/permutation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/onClick"
        app:layout_constraintTop_toBottomOf="@+id/number_game_settings" />

    <CheckBox
        android:id="@+id/onClick"
        android:layout_width="123dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:text="@string/on_click"
        app:layout_constraintLeft_toLeftOf="@id/permutation"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_game_settings" />


    <CheckBox
        android:id="@+id/additionCB"
        android:layout_width="123dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:text="@string/additionCB"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/addition"
        app:layout_constraintTop_toBottomOf="@+id/permutation" />
    <RadioGroup
        android:id="@+id/addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permutation">
        <RadioButton
            android:id="@+id/addition_lvl_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/addition_lvl_1"
            />
        <RadioButton
            android:id="@+id/addition_lvl_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_gravity="center"
            android:text="@string/addition_lvl_2"
            />
        <RadioButton
            android:id="@+id/addition_lvl_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/addition_lvl_3"
            />
    </RadioGroup>


    <CheckBox
        android:id="@+id/subtractionCB"
        android:layout_width="123dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:text="@string/subtractionCB"
        android:layout_marginLeft="40dp"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/subtraction"
        app:layout_constraintTop_toBottomOf="@+id/addition" />
    <RadioGroup
        android:id="@+id/subtraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addition">
        <RadioButton
            android:id="@+id/subtraction_lvl_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/subtraction_lvl_1"
            />
        <RadioButton
            android:id="@+id/subtraction_lvl_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_gravity="center"
            android:text="@string/subtraction_lvl_2"
            />
        <RadioButton
            android:id="@+id/subtraction_lvl_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/subtraction_lvl_3"
            />
    </RadioGroup>

    <CheckBox
        android:id="@+id/multiplicationCB"
        android:layout_width="123dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:text="@string/multiplicationCB"
        android:layout_marginLeft="40dp"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/multiplication"
        app:layout_constraintTop_toBottomOf="@+id/subtraction" />
    <RadioGroup
        android:id="@+id/multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtraction">
        <RadioButton
            android:id="@+id/multiplication_lvl_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/multiplication_lvl_1"
            />
        <RadioButton
            android:id="@+id/multiplication_lvl_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_gravity="center"
            android:text="@string/multiplication_lvl_2"
            />
        <RadioButton
            android:id="@+id/multiplication_lvl_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/multiplication_lvl_3"
            />
    </RadioGroup>


    <CheckBox
        android:id="@+id/divisionCB"
        android:layout_width="123dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:text="@string/divisionCB"
        android:layout_marginLeft="40dp"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/division"
        app:layout_constraintTop_toBottomOf="@+id/multiplication" />
    <RadioGroup
        android:id="@+id/division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/multiplication">
        <RadioButton
            android:id="@+id/division_lvl_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/division_lvl_1"
            />
        <RadioButton
            android:id="@+id/division_lvl_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_gravity="center"
            android:text="@string/division_lvl_2"
            />
        <RadioButton
            android:id="@+id/division_lvl_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/division_lvl_3"
            />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>